--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AplicacionVagones
 spring.datasource.url=jdbc:mysql://localhost:3306/mina
 spring.datasource.username=root
-spring.datasource.password=Rocky57*15
+spring.datasource.password=DEATHNOTE1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8081
