--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=DEATHNOTE1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8081
+logging.file.name=logs/proyecto-vagoneta.log
+logging.level.root=INFO
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss}){faint} %clr(%5p) %clr([%t]){cyan} %clr(%c){yellow} - %m%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %5p [%t] %c - %m%n
+logging.file.max-size=10MB
+logging.file.total-size-cap=100MB
